--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,16 @@ GITHUB_CLIENT_SECRET="your-github-client-secret"
 # ===========================================
 NODE_ENV="development"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# ===========================================
+# AI CONFIGURATION
+# ===========================================
+# OpenAI API Key for AI features
+# Get your key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY="sk-your-openai-api-key"
+
+# Optional: Customize AI model
+# OPENAI_MODEL="gpt-4o-mini"  # Default model
 NEXT_PUBLIC_APP_NAME="Evolution Future"
 
 # ===========================================
