--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.36",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,6 +34,7 @@
     "@sentry/nextjs": "^10.40.0",
     "@stripe/stripe-js": "^8.8.0",
     "@tanstack/react-query": "^5.40.0",
+    "ai": "^6.0.103",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -43,6 +45,7 @@
     "next": "^14.2.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "openai": "^6.25.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "recharts": "^3.7.0",
